Added Google adsensor code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     crossorigin="anonymous"></script>
 
     <meta charset="UTF-8">
+    <meta name="google-adsense-account" content="ca-pub-7063744355398141">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>102 Past Question By Emmanuel Jegede</title>
     <link rel="stylesheet" href="style.css">
