I have made major changes

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
     <script src="script.js"></script>
 
     <footer>
-        <h3> For feedback and complaint, Message 08071761041 </h3> 
+        <b>NOTE: This site is not to replace your textbooks or tutorials, Rather to assist you further in personal study</b>
+        <h3> For Feedback and complaint, Message 08071761041<br>
+        Your feedbacks are important. </h3> 
     </footer>
 </body>
 </html>
