Changed the select topic

--- a/articles.html
+++ b/articles.html
@@ -791,7 +791,7 @@ Hermaphroditic with complex reproductive systems.</p>
 
                 annelids: `
                     <h2>Review of Animal Kingdom II</h2> 
-                    <h1>Nematoda,Annelids,Mollusca</h1>
+                    <h1>Nematoda,Annelids,<br>Mollusca</h1>
                     <h3>Phylum Nematoda (Roundworms)</h3>
 
 <b>Characteristics:</b>
