--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <img src="Line 1.png" alt="LAUTECH Logo" class="longline">
         <button class="btn" onclick="showPage('class-page')">CLASS <img src="pngegg (2).png" alt="Class-image" class="book"></button>
         <button class="btn" onclick="showPage('news-page')">NEWS  <img src="pngegg.png" alt="News-image" class="news"></button>
-        <nav>
-            <a href="#opening-page">Back</a>
-        </nav>
+       
     </div>
 
     <!-- Subject Selection -->
@@ -50,6 +48,7 @@
 
         <label for="subject">Subject:</label>
         <select id="subject" name="subject">
+            <option value="">Select a Subject</option>
             <option value="bio102">Bio 102</option>
             <option value="chm102">Chm 102</option>
             <option value="phy102">Phy 102</option>
