--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <button class="butn" onclick="showPage('syllabus-page')">My Syllabus</button>
     </div>
 
+    <nav>
+        <a href="#opening-page"></a>
+    </nav>
+
     <!-- Topic by Topic Page -->
     <div id="topic-by-topic-page" class="container" style="display: none;">
         <label for="level">Level:</label>
