--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <button id="subject-container" onclick="startQuiz('physics')">PHY 102</button>
     </div>
 
+    <a href="#opening-page">back</a>
+
     <!-- Class Page -->
     <div id="class-page" class="container" style="display: none;">
         <button class="butn" onclick="showPage('subject-selection')">Study Past Question</button>
@@ -40,7 +42,7 @@
     </div>
 
     <nav>
-        <a href="#opening-page"></a>
+        <a href="#opening-page">back</a>
     </nav>
 
     <!-- Topic by Topic Page -->
