--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button id="subject-container" onclick="startQuiz('physics')">PHY 102</button>
     </div>
 
-    <a href="#opening-page">back</a>
+    <a href="#opening-page"></a>
 
     <!-- Class Page -->
     <div id="class-page" class="container" style="display: none;">
@@ -42,7 +42,7 @@
     </div>
 
     <nav>
-        <a href="#opening-page">back</a>
+        <a href="#opening-page"></a>
     </nav>
 
     <!-- Topic by Topic Page -->
