--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="opening-page" class="container">
         <img src="LAUTECH-Logo_0.png" alt="LAUTECH Logo" class="logo">
         <H2>Your LAUTECH Assistant</H2>
-          <center><small> by Emmanuel O.J</small></center> 
+          <center><small> by Emmanuel O. Jegede</small></center> 
         <img src="Line 1.png" alt="LAUTECH Logo" class="longline">
         <button class="btn" onclick="showPage('class-page')">CLASS <img src="pngegg (2).png" alt="Class-image" class="book"></button>
         <button class="btn" onclick="showPage('news-page')">NEWS  <img src="pngegg.png" alt="News-image" class="news"></button>
