--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="subject-container" onclick="startQuiz('biology')">BIO 102</button>
         <button id="subject-container" onclick="startQuiz('chemistry')">CHM 102</button>
         <button id="subject-container" onclick="startQuiz('math')">MTH 102</button>
-        <button id="subject-container" onclick="startQuiz('english')">GNS 102</button>
+        <button id="subject-container" onclick="startQuiz('english')">Gst 112</button>
         <button id="subject-container" onclick="startQuiz('physics')">PHY 102</button>
     </div>
 
@@ -55,11 +55,11 @@
         <label for="subject">Subject:</label>
         <select id="subject" name="subject">
             <option value="">Select a Subject</option>
-            <option value="bio102">Bio 102</option>
-            <option value="chm102">Chm 102</option>
-            <option value="phy102">Phy 102</option>
-            <option value="mth102">Mth 102</option>
-            <option value="gns102">Gns 102</option>
+            <option value="bio102">BIO 102</option>
+            <option value="chm102">CHM 102</option>
+            <option value="phy102">PHY 102</option>
+            <option value="mth102">MTH 102</option>
+            <option value="gst112">GST 112</option>
         </select>
 
         <label for="topic">Topic:</label>
@@ -118,7 +118,7 @@
             <option value="chm102">Chm 102</option>
             <option value="phy102">Phy 102</option>
             <option value="mth102">Mth 102</option>
-            <option value="gns102">Gns 102</option>
+            <option value="gst112">Gst112 102</option>
         </select>
 
         <button class="btn" onclick="showSyllabus()">Show Syllabus</button>
