--- a/syllabus.html
+++ b/syllabus.html
@@ -21,13 +21,13 @@
             
             // Assuming syllabus is an object with subjects as keys and content as values
             const syllabus = {
-                "bio102":"<h3>Syllabus for Bio 102</h3><BR><h1> Taxonomy<br><br><br> Plant Diversity<br><br><br> Animal Diversity<br><br><br> Ecology",
+                "bio102":"<h3>Syllabus for BIO 102</h3><BR><h1> Taxonomy<br><br><br> Plant Diversity<br><br><br> Animal Diversity<br><br><br> Ecology",
             
 
-                "chm102": "<h3>Syllabus for Chm 102</h3><BR><h2>- Principles of organic chemistry <br><br>- Hybridization<br><br>- Chemical bonding<br><br>- Qualitative analysis<br><br>- Factors influencing organic reactions<br><br>- Types of Organic reaction<br><br>- Isomerism<br><br>- Chemistry of hydrocarbon<br><br>- Coordination chemistry<br><br>-Nomenclature</h2>",
-                "phy102": "<h3>Syllabus for Phy 102</h3><BR><h2>- Waves<br><br>- Optics<br><br>- Electrostatics<br><br>- D.C Electricity<br><br>- Simple A.C Circuit <br><br>- Magnetism & Electromagnetism<br><br>- Semi-conductor and it's applications<br><br>- Atomic and Quantum Physics<br><br>- Nuclear Physics</h2>",
-                "mth102": "<h3>Syllabus for Mth 102</h3><BR><h2>- Trigonometry<br><br>- Differential Calculus<br><br>- Integral Calculus<br><br>- Coordinate Geometry<br><br>- Statistics </h2>",
-                "gns102": "<h3>Syllabus for Gns 102</h3><BR><h2>- Outwritings<br><br>- Scientific writings<br><br>- Writing Scientific project<br><br>- Aspects of grammatical structures in Scientific expressions in English<br><br>- Word formation </h2>",
+                "chm102": "<h3>Syllabus for CHM 102</h3><BR><h2>- Principles of organic chemistry <br><br>- Hybridization<br><br>- Chemical bonding<br><br>- Qualitative analysis<br><br>- Factors influencing organic reactions<br><br>- Types of Organic reaction<br><br>- Isomerism<br><br>- Chemistry of hydrocarbon<br><br>- Coordination chemistry<br><br>-Nomenclature</h2>",
+                "phy102": "<h3>Syllabus for PHY 102</h3><BR><h2>- Waves<br><br>- Optics<br><br>- Electrostatics<br><br>- D.C Electricity<br><br>- Simple A.C Circuit <br><br>- Magnetism & Electromagnetism<br><br>- Semi-conductor and it's applications<br><br>- Atomic and Quantum Physics<br><br>- Nuclear Physics</h2>",
+                "mth102": "<h3>Syllabus for MTH 102</h3><BR><h2>- Trigonometry<br><br>- Differential Calculus<br><br>- Integral Calculus<br><br>- Coordinate Geometry<br><br>- Statistics </h2>",
+                "gst102": "<h3>Syllabus for GST 102</h3><BR><h2>- Conceptual Classification of Culture<br><br>- <br><br>- Traditional economy of pre-colonial Nigerian people<br><br>- Nation-State <br><br>- The Role of the Judiciary in Upholding Peoples Fundamental Rights <br><br>- Acceptable Norms and Values of the Major Ethnic Groups in Nigeria<br><br>- Multi-Ethnic and Multilingual Nature of Nigeria</h2>",
             };
 
             let syllabusContent = syllabus[subject] || '<p>No syllabus found for the selected subject.</p>';
