--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Your LAUTECH Assistant</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://api.whatsapp.com/send?phone=23471701041&text=Hey, i want to drop a feedback about your lautech assistant" class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i>
+</a>
+
 <body>
     <!-- New Opening Page -->
     <div id="opening-page" class="container">
@@ -157,10 +163,6 @@
 
     <script src="script.js"></script>
 
-    <footer>
-        <b>NOTE: This site is not to replace your textbooks or tutorials, Rather to assist you further in personal study</b>
-        <h3> For Feedback and complaint, Message 08071761041<br>
-        Your feedbacks are important. </h3> 
-    </footer>
+   
 </body>
 </html>
