gst que and fixed class page

--- a/articles.html
+++ b/articles.html
@@ -792,6 +792,53 @@ Significance:
             <li>Phylum Ascetospora</li>
         </ul>
 
+        <h1>Phylum Cnidaria (Coelenterata)</h1>
+<p>Cnidarians are aquatic, mostly marine organisms with a distinct level of body organization.</p>
+<ul>
+    <li>They do not possess sensory structures or organs except simple nerve nets.</li>
+    <li>They exhibit radial symmetry with oral and aboral ends.</li>
+    <li>The body wall is composed of two layers of cells, making them <strong>diploblastic</strong> animals.</li>
+    <li>The two layers are the outer <strong>epidermis</strong> and the inner <strong>gastrodermis</strong>, separated by a non-cellular layer called the <strong>mesoglea</strong>.</li>
+    <li>The tentacles bear specialized cells called <strong>nematocysts</strong>, which can inject poison into prey.</li>
+    <li>They may have an exoskeleton or endoskeleton made of chitin, calcium carbonate, or protein, often equipped with suckers or hooks for attachment.</li>
+</ul>
+
+<h2>Phylum Platyhelminthes (Flatworms)</h2>
+<p>Platyhelminthes, commonly known as flatworms, are mostly endoparasites with a dorsoventrally flattened body.</p>
+<ul>
+    <li>They are <strong>triploblastic</strong> animals, meaning they have three body layers.</li>
+    <li>They have a mouth but no anus; the gut has numerous blind-ending branches.</li>
+    <li>Excretion and osmoregulation are performed by specialized cells called <strong>flame cells</strong>.</li>
+    <li>They are hermaphrodites, having both male and female reproductive organs, and they usually reproduce through cross-fertilization.</li>
+    <li>They have well-developed muscles and tissues organized into organs.</li>
+</ul>
+
+<h3>Reproduction in Flatworms</h3>
+<p>For example, <em>Planaria</em>, a member of the class Turbellaria, reproduces both asexually and sexually:</p>
+<ul>
+    <li>In asexual reproduction, the animal constricts behind the pharyngeal region and separates into two, with each new animal regenerating its missing parts.</li>
+    <li>In sexual reproduction, they exchange sperm by cross-fertilization. They have several testes and two anterior ovaries.</li>
+</ul>
+
+<h3>Classes of Phylum Platyhelminthes</h3>
+<p>Platyhelminthes are divided into the following classes:</p>
+<ul>
+    <li><strong>Turbellaria</strong>: Mostly free-living, predominantly marine, flat and leaf-like. Their body surface is ciliated with only a thin cuticle. An example is <em>Planaria</em>.</li>
+    <li><strong>Temnocephala</strong>: They possess tentacles on their anterior end. Their development is direct.</li>
+    <li><strong>Monogenea</strong>: Specialized parasites that live on a single host throughout life, usually aquatic vertebrates or invertebrates. They have adhesive organs called haptors.</li>
+    <li><strong>Trematoda</strong>: Parasitic flatworms, such as <em>Fasciola gigantica</em> (liver fluke), which inhabit the liver and bile ducts of cattle and sheep.</li>
+    <li><strong>Cestoda</strong>: Tapeworms, parasitic organisms that live in the digestive tracts of vertebrates. They lack a digestive system and absorb nutrients directly through their skin.</li>
+</ul>
+
+<h2>Advancements of Platyhelminthes Over Sponges and Cnidarians</h2>
+<ul>
+    <li>Platyhelminthes possess internal gonads and copulatory organs.</li>
+    <li>They have a centralized nervous system with an anterior ganglion and longitudinal nerve cords.</li>
+    <li>They possess well-developed muscles for various movements.</li>
+    <li>They have a mesoderm as the middle body layer, unlike cnidarians that have a non-cellular mesoglea.</li>
+</ul>
+
+
 
                 `,
                 
