--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button id="subject-container" onclick="startQuiz('biology')">BIO 102</button>
         <button id="subject-container" onclick="startQuiz('chemistry')">CHM 102</button>
         <button id="subject-container" onclick="startQuiz('math')">MTH 102</button>
-        <button id="subject-container" onclick="startQuiz('english')">Gst 112</button>
+        <button id="subject-container" onclick="startQuiz('english')">GST 112</button>
         <button id="subject-container" onclick="startQuiz('physics')">PHY 102</button>
     </div>
 
