--- a/articles.html
+++ b/articles.html
@@ -780,7 +780,7 @@ Significance:
 
                 notee: `
                  <h1>Kingdom Animalia</h1>
-        <h4>Phylum Protozoa</h4>
+        <h2>Phylum Protozoa</h2>
         <p>The widely used and current criteria for classifying protozoa are based primarily on differences in locomotion, number of nuclei, organelles, life cycles, and mode of reproduction. Based on these criteria, the following phyla in the sub-kingdom are recognized:</p>
         <ul>
             <li>Phylum Sarcomastigophora</li>
@@ -2321,7 +2321,136 @@ The behaviour of nitrogen differs from rest of the elements due to the following
 
 
                 `,
+
+                 org: `
+
+                 <h2>Organic Chemistry</h2>
+<p>
+    Organic chemistry is a branch of chemistry that involves the scientific study of the structural properties, composition, reactions, and preparation of carbon-based compounds, mostly hydrocarbons and their derivatives. Other elements that may be present in organic compounds apart from carbon and hydrogen include nitrogen, oxygen, and sulfur.
+</p>
+
+<h3>Classification of Organic Compounds</h3>
+<p>Organic compounds can be classified into the following categories:</p>
+
+<ul>
+    <li><strong>Acyclic Compounds:</strong> These are compounds that do not have a ring structure. They can be further classified as:
+        <ul>
+            <li><strong>Saturated:</strong> Compounds that contain only single bonds between carbon atoms. Example: Alkanes.</li>
+            <li><strong>Unsaturated:</strong> Compounds that contain one or more double or triple bonds between carbon atoms. Examples:
+                <ul>
+                    <li><strong>Alkenes:</strong> Compounds with at least one carbon-carbon double bond.</li>
+                    <li><strong>Alkynes:</strong> Compounds with at least one carbon-carbon triple bond.</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+    <li><strong>Cyclic Compounds:</strong> These are compounds that have a ring structure. They can be classified as:
+        <ul>
+            <li><strong>Aromatic Compounds:</strong> Cyclic compounds that follow Huckel’s rule and exhibit aromaticity. Example: Benzene.</li>
+            <li><strong>Heterocyclic Compounds:</strong> Cyclic compounds where atoms other than carbon, such as nitrogen, oxygen, or sulfur, are part of the ring.</li>
+        </ul>
+    </li>
+</ul>
+
+<h3>Examples</h3>
+<ul>
+    <li><strong>Aromatic:</strong> Benzene (C<sub>6</sub>H<sub>6</sub>)</li>
+    <li><strong>Saturated Acyclic:</strong> Hexane (C<sub>6</sub>H<sub>14</sub>)</li>
+</ul>
+
+<h2>Introduction to Electronic Theory in Organic Compounds</h2>
+<p>
+    The electronic theory is fundamental to understanding the behavior of electrons in organic compounds. It was first introduced by G.N. Lewis in 1916 with his concept of electron-pair bonding. Other contributions include:
+</p>
+<ul>
+    <li><strong>Linus Pauling (1931):</strong> Introduced the concept of hybridization, which explains the mixing of atomic orbitals.</li>
+    <li><strong>Robert S. Mulliken (1932):</strong> Developed the molecular orbital theory.</li>
+    <li><strong>Erich Hückel (1931-1937):</strong> Applied quantum mechanics to organic chemistry, explaining the electronic structure of aromatic compounds.</li>
+    <li><strong>Friedrich A. Kekulé:</strong> Proposed the ring structure of benzene.</li>
+</ul>
+
+<h3>Importance of Electronic Theory</h3>
+<p>
+    The electronic theory provides a framework to understand chemical bonding in organic molecules. It is essential for predicting molecular structure, understanding chemical reactions, and explaining the stability of organic molecules. The theory is also central in designing new molecules with specific properties, such as environmental-friendly chemicals. Additionally, it helps interpret spectroscopic data from methods like UV-Visible, IR, and NMR (nuclear magnetic resonance).
+</p>
+
+<h2>Atomic Structure of Organic Compounds</h2>
+<p>
+    Organic compounds primarily consist of carbon atoms bonded to other elements like hydrogen, oxygen, sulfur, and halogens. The electronic configuration of carbon is 1s<sup>2</sup> 2s<sup>2</sup> 2p<sup>2</sup>, and when excited, it hybridizes to form stable compounds.
+</p>
+
+<h3>Hybridization of Carbon</h3>
+<ul>
+    <li><strong>sp<sup>3</sup> Hybridization:</strong> Involves the formation of four single bonds (e.g., in alkanes) with tetrahedral geometry.</li>
+    <li><strong>sp<sup>2</sup> Hybridization:</strong> Involves the formation of one sigma and one pi bond (e.g., in alkenes), where a sigma bond results from the overlap of hybrid orbitals and the pi bond from sideways overlap of unhybridized p-orbitals.</li>
+    <li><strong>sp Hybridization:</strong> Involves the formation of one sigma and two pi bonds (e.g., in alkynes).</li>
+</ul>
+
+<h3>Chemical Bonds in Organic Compounds</h3>
+<p>
+    Organic compounds primarily form covalent bonds. The types of covalent bonds include:
+</p>
+<ul>
+    <li><strong>Single Bond (Sigma Bond):</strong> Involves the sharing of one pair of electrons between two atoms.</li>
+    <li><strong>Double Bond:</strong> Consists of one sigma and one pi bond, resulting from lateral overlap of unhybridized orbitals.</li>
+    <li><strong>Triple Bond:</strong> Consists of one sigma and two pi bonds, typically found in alkynes.</li>
+</ul>
+
+<h3>Bonding Theories</h3>
+<ul>
+    <li><strong>Molecular Orbital Theory:</strong> Proposes that molecular orbitals are formed by the combination of atomic orbitals.</li>
+    <li><strong>Resonance:</strong> Describes the delocalization of electrons across multiple bonds, providing a more accurate representation of electron distribution.</li>
+</ul>
+
+<h2>Electronic Effects in Organic Chemistry</h2>
+<p>
+    Understanding electronic effects is fundamental to predicting the reactivity and properties of organic molecules. These effects include:
+</p>
+
+<h3>Types of Electronic Effects</h3>
+<ul>
+    <li><strong>Inductive Effect:</strong> Refers to the shifting of electron density along a carbon chain due to the electronegativity of substituents. This effect decreases with distance.</li>
+    <li><strong>Resonance Effect:</strong> Involves the delocalization of electrons through pi bonds or lone pairs, which stabilizes the molecule. Example: C=O (carbonyl group).</li>
+    <li><strong>Electron Donation (Resonance Effect):</strong> Electron-donating groups like –OCH<sub>3</sub> increase electron density via resonance.</li>
+    <li><strong>Hyperconjugation:</strong> Refers to the interaction between sigma bonds (C-H or C-C single bonds) and adjacent pi or empty p-orbitals, stabilizing carbocations.</li>
+</ul>
+
+                 `,
                   
+                orgii: `
+
+                <h2>Isolation, Precipitation, and Identification of Organic Compounds</h2>
+<p>
+    Organic compounds containing double bonds must have at least two hydrogen atom deficiencies. For instance, the presence of a double bond introduces a deficiency of hydrogen atoms in the compound. The botanical name of tomato is <em>Solanum lycopersicum</em>.
+</p>
+
+<h3>Hydrogen Deficiency and Conjugated Systems</h3>
+<p>
+    Hydrogen deficiency in organic compounds can be used to identify the structure and saturation of a compound. For instance, conjugated systems exhibit extended π-electron delocalization. The more extended the conjugated system, the higher the likelihood that the compound will absorb visible light and exhibit color.
+</p>
+
+<h3>UV and Visible Wavelengths</h3>
+<ul>
+    <li><strong>UV Wavelength:</strong> 200-400 nm</li>
+    <li><strong>Visible Wavelength:</strong> 400-800 nm</li>
+</ul>
+
+<h3>Types of Conjugation Systems</h3>
+<ul>
+    <li><strong>Conjugated System:</strong> Occurs when a single bond separates two double bonds. These systems are characterized by delocalized π-electrons across multiple atoms, which affects the compound's absorption properties.</li>
+    <li><strong>Cumulative System:</strong> Occurs when two double bonds are adjacent to each other, sharing a common atom.</li>
+    <li><strong>Isolated System:</strong> Occurs when two double bonds are separated by at least two single bonds, resulting in non-conjugated regions of the molecule.</li>
+</ul>
+
+<h3>Techniques for Identifying Organic Compounds</h3>
+<ul>
+    <li><strong>Functional Group Detection:</strong> Used to determine the presence of specific functional groups within a compound.</li>
+    <li><strong>Mass Spectrometry:</strong> Determines the molar mass and fragmentation pattern of a compound, providing insights into its molecular structure.</li>
+    <li><strong>Nuclear Magnetic Resonance (NMR):</strong> Determines the atomic connectivity in an organic molecule by analyzing the magnetic properties of atomic nuclei.</li>
+</ul>
+
+               `,
+
                 analysis: `
 
                  <h1>Qualitative Analysis of Organic Compounds</h1>
