--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <button id="subject-container" onclick="startQuiz('english')">GST 112</button>
         <button id="subject-container" onclick="startQuiz('physics')">PHY 102</button>
     </div>
+    <nav>
+        <a href="#opening-page"></a>
+    </nav>
 
-    <a href="#opening-page"></a>
+   
 
     <!-- Class Page -->
     <div id="class-page" class="container" style="display: none;">
