--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <!-- Class Page -->
     <div id="class-page" class="container" style="display: none;">
-        <button class="butn" onclick="showPage('subject-selection')"><small>Study Past Question</small></button>
-        <button class="bntn" onclick="showPage('topic-by-topic-page')"><small> Topic by Topic</small></button>
-        <button class="butn" onclick="showPage('syllabus-page')"><small> Syllabus </small></button>
+        <button class="butn" onclick="showPage('subject-selection')">Study Past Question</button>
+        <button class="bntn" onclick="showPage('topic-by-topic-page')"> Topic by Topic</button>
+        <button class="butn" onclick="showPage('syllabus-page')"> Syllabus </button>
     </div>
     
 
@@ -44,7 +44,7 @@
     <button id="subject-container" onclick="startQuiz('math')">MTH 102</button>
     <button id="subject-container" onclick="startQuiz('english')">GST 112</button>
     <button id="subject-container" onclick="startQuiz('physics')">PHY 102</button>
-   
+    
     <nav>
         <a href="class-page"></a>
     </nav>
