--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- Class Page -->
     <div id="class-page" class="container" style="display: none;">
-        <button class="butn" onclick="showPage('subject-selection')">Study Past Question</button>
+        <button class="butn" onclick="showPage('subject-selection')">Past Question</button>
         <button class="bntn" onclick="showPage('topic-by-topic-page')"> Topic by Topic</button>
         <button class="butn" onclick="showPage('syllabus-page')"> Syllabus </button>
     </div>
