--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
 
     <script src="script.js"></script>
 
+    <br><br><br><br><br><footer>
+       <center> To get the best Lautech update and memes join <a href=https://whatsapp.com/channel/0029VahIswL2ZjCebhHYQL1l. target="_blank">Lautech channel </center>
+    </footer>
    
 </body>
 </html>
