--- a/syllabus.html
+++ b/syllabus.html
@@ -11,7 +11,7 @@
         <div id="syllabus-content" class="article-box">
             <!-- Syllabus content will be dynamically inserted here -->
         </div>
-        <button class="btn" onclick="goBackToSyllabus()">Back to Syllabus</button>
+        <button class="btn" onclick="goBackToSyllabus()">Back to Homepage</button>
     </div>
 
     <script>
