--- a/articles.html
+++ b/articles.html
@@ -12,7 +12,7 @@
     </div>
 
     <footer>
-        <h3>For feedback and complaint, Message 08071761041</h3>
+        <h3>Join Lautech NO.1 channel for all the latest  updates, news, memes, and giveaways  <a href=https://whatsapp.com/channel/0029VahIswL2ZjCebhHYQL1l. target="_blank">Lautech Channel</h3>
     </footer>
 
     <script>
@@ -5284,83 +5284,63 @@ a href=https://youtu.be/XiGRJUxXcLk?si=IUmkvCYGK-gvMsfV target="_blank">HOW TO U
 
                  ethnic: `
 
-                  <h1>Multi-Ethnic and Multilingual Nature of Nigeria</h1>
+                  <h2>Summary of the Multi-Ethnic and Multilingual Nature of Nigeria</h2>
 
-    <p>It is not a gainsay the argument that Nigeria is grossly a bilingual society. A multilingual society or community is a community where there are numerous languages being used by the activities for the purpose of communication and conduct of daily life. This multilingual nature of Nigeria is occasioned by the multi-ethnic nature of the country as indigenes originate from different ethnic groups. The linguistic situation in Nigeria is so diverse that Nigerian languages have been classified into major linguistic groups. This will be discussed in this chapter.</p>
+<h3>Multilingual Nature of Nigeria</h3>
+<ul>
+    <li>Nigeria is a highly multilingual society, with around 515 listed languages. Of these, 505 are living languages, 2 are second languages without mother-tongue speakers, and 8 are extinct.</li>
+    <li>The multilingual nature of Nigeria is a result of its multi-ethnic diversity, where each ethnic group speaks different languages.</li>
+    <li>Nigerian languages are classified into major linguistic groups based on their historical origins and development.</li>
+</ul>
 
-    <h2>Major Linguistic Groups in Nigeria</h2>
+<h3>Major Linguistic Groups in Nigeria</h3>
+<ul>
+    <li><strong>Niger-Congo-Kordofanian Family:</strong>
+        <ul>
+            <li>Includes subgroups such as the Benue-Congo branch, Kwa subgroup, Ijoid branch, and others.</li>
+            <li>Notable languages include Yoruba, Igbo, Tiv, Idoma, Nupe, and Efik.</li>
+        </ul>
+    </li>
+    <li><strong>Afro-Asiatic Family:</strong>
+        <ul>
+            <li>Includes Hausa, Margi, and Bade languages, among others.</li>
+            <li>This group also includes the Fulani people, who are relatively recent immigrants.</li>
+        </ul>
+    </li>
+    <li><strong>Nilo-Saharan Family:</strong>
+        <ul>
+            <li>Languages in this group include Kanuri, Bagirmi, and Zerma.</li>
+        </ul>
+    </li>
+    <li>The Khoisan or Click Family is not represented in Nigeria.</li>
+</ul>
 
-    <p>Nigeria is undoubtedly a multi-ethnic and multilingual society. The number of languages listed for Nigeria is 515. Out of these, 505 are claimed to be living languages, 2 are second languages without mother tongue speakers, and 8 are extinct. This multilingual nature of the country therefore necessitates the classification of indigenous languages in Nigeria into several groups of languages. This classification aims to find out how one language is similar to the other. Classification of Nigerian languages was an attempt to group related Nigerian languages together into their meaningful categories by looking through their historical origins and development. Nigerian languages belong to a group of African languages in Africa, following Joseph Greenberg’s (1963) classification of African languages into four main family groups and several branches or sub-groups under which Nigerian language groups belong.</p>
+<h3>Advantages of Language Classification</h3>
+<ul>
+    <li>Helps linguists record and understand world languages.</li>
+    <li>Facilitates cultural and cross-cultural studies by grouping similar languages together.</li>
+    <li>Assists governments in administrative tasks, such as setting language policies and determining official languages.</li>
+    <li>Supports educational institutions in developing language curricula and allocating resources for language programs.</li>
+    <li>Helps international organizations set guidelines for language usage and translation.</li>
+    <li>Essential for documenting and preserving endangered and minority languages.</li>
+</ul>
 
-    <h3>1. Niger-Congo-Kordofanian Family</h3>
-    <ul>
-        <li>Benue-Congo branch</li>
-        <li>West Atlantic branch</li>
-        <li>East Adamawa branch</li>
-        <li>Mande branch</li>
-        <li>By branch</li>
-        <li>Benue-Niger including Bantu branch</li>
-        <li>Kordofanian branch</li>
-        <li>Voltaic branch</li>
-    </ul>
-
-    <h3>2. Afro-Asiatic Family</h3>
-    <ul>
-        <li>Arabic branch</li>
-        <li>Berber branch</li>
-        <li>Chadic branch</li>
-        <li>Amharic branch</li>
-        <li>Cushitic branch</li>
-    </ul>
-
-    <h3>3. Nilo-Saharan or Sudanic Family</h3>
-    <ul>
-        <li>Saharan branch</li>
-        <li>Songhaic branch</li>
-        <li>Nilotic branch</li>
-        <li>Magban branch</li>
-        <li>Furian branch</li>
-    </ul>
-
-    <h3>4. Khoisan or Click Family</h3>
-    <ul>
-        <li>Sandawe branch</li>
-        <li>Hadzabe branch</li>
-    </ul>
-
-    <p>Out of the four groups identified above, Nigerian languages have been categorized into the first three groups namely: Niger-Congo-Kordofanian Family, Afro-Asiatic Family, and Nilo-Saharan or Sudanic Family of languages.</p>
-
-    <h2>Advantages of Language Classification</h2>
-
-    <p>Language classification refers to the categorization of languages into various groups based on their structural, historical, and typological features. Linguists classify languages into families, branches, and groups to understand their relationships and evolution over time. The classification of languages into major linguistic groups has several benefits:</p>
-
-    <ul>
-        <li>Assists linguists in having a record of all the world's languages.</li>
-        <li>Helps demonstrate cultural and cross-cultural patterns.</li>
-        <li>Essential for government documentation and administrative purposes.</li>
-        <li>Important for educational curriculum development and resource allocation.</li>
-        <li>Necessary for establishing international standards and regulations for language usage.</li>
-        <li>Crucial for language documentation and preservation, especially for endangered languages.</li>
-    </ul>
-
-    <h2>Functions of Languages in Nigerian Indigenous Communities</h2>
-
-    <p>The functions of language in Nigerian indigenous communities include:</p>
-
-    <ul>
-        <li>Language serves as a major means of communication in traditional administrative duties by community leaders.</li>
-        <li>Used in the mass media for disseminating news and information.</li>
-        <li>Serves as a medium for agitation for self-rule and improved governance.</li>
-        <li>Acts as a medium of cultural expression and socialization.</li>
-        <li>Helps identify various speech communities.</li>
-        <li>Facilitates economic and social reconstruction and integration among linguistic groups.</li>
-        <li>Reduces the need for interpreters in communication.</li>
-        <li>Reflects man's actions and behaviors.</li>
-        <li>Used as a medium for inter-ethnic communication.</li>
-        <li>Studied as school subjects at various educational levels.</li>
-        <li>Used as a medium for religious preaching.</li>
-        <li>Used by politicians as a medium for political campaigns.</li>
-    </ul>
+<h3>Functions of Languages in Nigerian Indigenous Communities</h3>
+<ul>
+    <li>Serves as the main medium for communication in traditional administrative duties and cultural transmission.</li>
+    <li>Plays a crucial role in mass media, particularly in radio and television, where local languages are used to broadcast news and programs.</li>
+    <li>Served as a medium of agitation for self-rule, leading to Nigeria’s political independence in 1960.</li>
+    <li>Acts as a vehicle for cultural expression and socialization, helping to pass on cultural values and norms to younger generations.</li>
+    <li>Helps to identify different speech communities in Nigeria, with around 505 speech communities present in the country.</li>
+    <li>Facilitates social and economic integration in a multi-lingual society by promoting rapport and understanding among different linguistic groups.</li>
+    <li>Individuals who speak the local language of a community are more easily accepted, fostering integration and cooperation.</li>
+    <li>Reduces the need for interpreters in multilingual interactions, promoting more direct communication.</li>
+    <li>Reflects human behavior and social interactions, as language use is an important aspect of social conduct.</li>
+    <li>Acts as a key medium for inter-ethnic communication despite the linguistic diversity in the country.</li>
+    <li>Some indigenous languages are taught as subjects in schools, making them part of formal education systems.</li>
+    <li>Used for religious preaching in Nigeria, where major languages like Yoruba, Hausa, and Igbo are used for disseminating religious teachings.</li>
+    <li>Politicians often use indigenous languages in political campaigns to connect with local communities.</li>
+</ul>
 
                  `,
 
@@ -5375,9 +5355,5 @@ a href=https://youtu.be/XiGRJUxXcLk?si=IUmkvCYGK-gvMsfV target="_blank">HOW TO U
         }
     </script>
 </body>
-<footer>
-    <b>NOTE: This site is not to replace your textbooks or tutorials, Rather to assist you further in personal study</b>
-    <h3></h3>
-    Your feedbacks are important. </h3> 
-</footer>
+
 </html>
