--- a/articles.html
+++ b/articles.html
@@ -12,7 +12,7 @@
     </div>
 
     <footer>
-        <h3>Join Lautech NO.1 channel for all the latest  updates, news, memes, and giveaways  <a href=https://whatsapp.com/channel/0029VahIswL2ZjCebhHYQL1l. target="_blank">Lautech Channel</h3>
+        <h3>Join Lautech best channel for all the latest  updates, news, memes, and giveaways  <a href=https://whatsapp.com/channel/0029VahIswL2ZjCebhHYQL1l target="_blank">Lautech Channel</h3>
     </footer>
 
     <script>
