--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
 
     <script src="script.js"></script>
 
-  
+    <footer>
+        <h3>Join Lautech best channel for all the latest  updates, news, memes, and giveaways  <a href=https://whatsapp.com/channel/0029VahIswL2ZjCebhHYQL1l target="_blank">Lautech Channel</h3>
+    </footer>
    
 </body>
 </html>
