--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </select>
 
         <button class="btn" onclick="showSyllabus()">Show Syllabus</button>
-        <button class="btn" onclick="showPage('class-page')">Back to Class</button>
+        <button class="btn" onclick="showPage('class-page')">To Class</button>
     </div>
 
     <!-- Articles Page -->
